# VkEXGuide

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Sago/: CMakeLists.txt
Sago/common/: single_internal.h
Sago/context/: engine_context.cpp  engine_context.h
Sago/core/: CMakeLists.txt  Core.h
Sago/core/io/log/: log.cpp  log.h
Sago/core/tools/: single_internal.h
Sago/core/util/: dll_export.h  double_buffer.h  spain_lock.cpp  spain_lock.h
Sago/drivers/: CMakeLists.txt
Sago/drivers/vulkan/: vk_manager.cpp  vk_manager.h
Sago/src/: main.cpp
Sego/include/core/io/: log.h
Sego/include/drivers/vulkan/: vk_manager.h
main/: main.cpp  runtime.cpp  runtime.h
platform/: CMakeLists.txt
platform/cmake/: copy_dll.cmake
platform/window/: window_sdl.cpp  window_sdl.h
